--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,6 +15,9 @@ $listColor:#1A519E;
     background: url('../../Design/Assets/SVG/Merged\ bar-57.svg')no-repeat;
     background-size: cover;
     padding: .5em;
+    position: fixed;
+    top: 0;
+    width: 100%;
 
     &__logo {
         padding-left: 1.5em;
@@ -38,6 +41,10 @@ $listColor:#1A519E;
             &:focus {
                 color: $fontColor;
             }
+        }
+
+        .current {
+            color: $fontColor;
         }
 
 
@@ -181,6 +188,8 @@ $listColor:#1A519E;
 .info {
     padding: .5em;
     background-color: #F4CF1B;
+    margin-top: 7.9em;
+    width: 100%;
 
     &__dernière {
         font-size: 1.7em;
@@ -199,6 +208,32 @@ $listColor:#1A519E;
         color: $fontColor;
     }
 
+}
+
+@media only screen and (max-width:851px) {
+    .info {
+        padding: .5em;
+        background-color: #F4CF1B;
+        margin-top: 4.7em;
+
+        &__dernière {
+            font-size: 1.7em;
+            font-weight: 700;
+            text-align: center;
+
+        }
+
+        &__Médicale {
+
+            margin: 0 auto;
+            text-align: center;
+            font-weight: bold;
+            font-size: 1.2em;
+            line-height: 2em;
+            color: $fontColor;
+        }
+
+    }
 }
 
 .secOne {
@@ -561,6 +596,11 @@ $listColor:#1A519E;
             width: 10em;
         }
 
+        .fiévre {
+            height: 13em;
+            width: 6em;
+        }
+
         &--p {
             text-align: center;
             font-size: 1.5em;
@@ -590,6 +630,11 @@ $listColor:#1A519E;
 
             &--img {
                 width: 5em;
+            }
+
+            .fiévre {
+                height: 8.5em;
+                width: 4.3em;
             }
 
             &--p {
@@ -624,6 +669,11 @@ $listColor:#1A519E;
                 width: 4em;
             }
 
+            .fiévre {
+                height: 6.6em;
+                width: 3.5em;
+            }
+
             &--p {
                 text-align: center;
                 font-size: 1.2em;
@@ -653,6 +703,11 @@ $listColor:#1A519E;
             margin: 0 auto;
 
             &--img {
+                width: 2.8em;
+            }
+
+            .fiévre {
+                height: 5em;
                 width: 2.8em;
             }
 
@@ -1096,15 +1151,6 @@ $listColor:#1A519E;
 
             }
 
-            //         padding: .1em .3em .1em .3em;
-            // font-size: 1.5em;
-            // text-decoration: none;
-            // height: 2em;
-            // align-items: center;
-            // background: transparent;
-            // border: 1px solid $fontColor;
-            // border-radius: .6em;
-
         }
 
         &__contact {
@@ -1224,4 +1270,564 @@ $listColor:#1A519E;
     border-top-left-radius: .5em;
     border-top-right-radius: .5em;
     padding: .6em;
+}
+
+// Page de conseil
+
+.protection {
+    text-align: center;
+
+    &__h1 {
+        margin: .5em auto;
+        color: $fontColor;
+        font-size: 2.5em;
+        width: 15em;
+    }
+
+    &__comment {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+
+        &--outil {
+            img {
+                padding: 2em;
+            }
+        }
+
+        h1 {
+            color: $listColor;
+        }
+
+    }
+
+    &__house {
+        padding-top: 2em;
+
+        &--img {
+            width: 8em;
+        }
+
+        &--h1 {
+            padding: 1em;
+            color: $listColor;
+        }
+    }
+}
+
+@media only screen and (max-width:1200px) {
+    .protection {
+        text-align: center;
+
+        &__h1 {
+            margin: .5em auto;
+            color: $fontColor;
+            font-size: 2em;
+            width: 15em;
+        }
+
+        &__comment {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            &--outil {
+                img {
+                    width: 5em;
+                }
+            }
+
+            h1 {
+                color: $listColor;
+                font-size: .9em;
+            }
+
+        }
+
+        &__house {
+            padding-top: 1.7em;
+
+            &--img {
+                width: 6em;
+            }
+
+            &--h1 {
+                padding: 1em;
+                color: $listColor;
+                font-size: .9em;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .protection {
+        text-align: center;
+
+        &__h1 {
+            margin: .5em auto;
+            color: $fontColor;
+            font-size: 2.5em;
+            width: 15em;
+        }
+
+
+        &__comment {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+
+            &--outil {
+                img {
+                    width: 8em;
+                }
+            }
+
+            h1 {
+                color: $listColor;
+                font-size: 1.5em;
+            }
+
+        }
+
+        &__house {
+            padding-top: 2em;
+
+            &--img {
+                width: 8em;
+            }
+
+            &--h1 {
+                padding: 1em;
+                color: $listColor;
+                font-size: 1.5em;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .protection {
+        text-align: center;
+
+        &__h1 {
+            margin: .5em auto;
+            color: $fontColor;
+            font-size: 2em;
+            width: 10em;
+        }
+
+
+        &__comment {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+
+            &--outil {
+                img {
+                    width: 6em;
+                }
+            }
+
+            h1 {
+                color: $listColor;
+                font-size: 1.2em;
+            }
+
+        }
+
+        &__house {
+            padding-top: 1.5em;
+
+            &--img {
+                width: 6em;
+            }
+
+            &--h1 {
+                padding: 1em;
+                color: $listColor;
+                font-size: 1.2em;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width:550px) {
+    .protection {
+        text-align: center;
+
+        &__h1 {
+            margin: .5em auto;
+            color: $fontColor;
+            font-size: 1.5em;
+            font-weight: bold;
+            width: 10em;
+        }
+
+
+        &__comment {
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+
+            &--outil {
+                img {
+                    width: 7em;
+                }
+            }
+
+            h1 {
+                padding: 1em;
+                color: $listColor;
+                font-size: 1.2em;
+            }
+
+        }
+
+        &__house {
+            padding-top: 2em;
+
+            &--img {
+                width: 7em;
+            }
+
+            &--h1 {
+                padding: 1.5em;
+                color: $listColor;
+                font-size: 1.2em;
+            }
+        }
+    }
+}
+
+.informations {
+    text-align: center;
+    background: #D0E5F0;
+    padding: 2em;
+    display: flex;
+    justify-content: space-around;
+
+    &__inforOne {
+
+        h1 {
+            font-size: 4em;
+            color: $fontColor;
+        }
+
+        h2 {
+            font-size: 2em;
+            color: $listColor;
+        }
+    }
+
+    &__infortow {
+        background: $fontColor;
+        color: white;
+        text-decoration: none;
+        border-radius: .3em;
+        font-size: 1.5em;
+        padding: 1em;
+        position: relative;
+        top: 5em;
+    }
+
+    &__inforthree {
+        @extend .informations__infortow;
+        padding: 1em 2.5em 1em 2.5em;
+    }
+}
+
+@media only screen and (max-width:1400px) {
+    .informations {
+        text-align: center;
+        background: #D0E5F0;
+        padding: 1.7em;
+        display: flex;
+        justify-content: space-around;
+
+        .informations__inforOne {
+
+            h1 {
+                font-size: 2.5em;
+                color: $fontColor;
+            }
+
+            h2 {
+                font-size: 1.5em;
+                color: $listColor;
+            }
+        }
+
+        .informations__infortow {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1.2em;
+            padding: 1em;
+            position: relative;
+            top: 5em;
+        }
+
+        .informations__inforthree {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1.2em;
+            position: relative;
+            top: 5em;
+            padding: 1em 2.5em 1em 2.5em;
+        }
+    }
+
+}
+
+@media only screen and (max-width:1200px) {
+    .informations {
+        text-align: center;
+        background: #D0E5F0;
+        padding: 1.5em;
+        display: flex;
+        justify-content: space-around;
+
+        .informations__inforOne {
+
+            h1 {
+                font-size: 2em;
+                color: $fontColor;
+            }
+
+            h2 {
+                font-size: 1.2em;
+                color: $listColor;
+            }
+        }
+
+        .informations__infortow {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1em;
+            padding: .7em;
+            position: relative;
+            top: 5em;
+        }
+
+        .informations__inforthree {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1em;
+            position: relative;
+            top: 5em;
+            padding: .8em 2em .8em 2em;
+        }
+    }
+
+}
+
+@media only screen and (max-width:800px) {
+    .informations {
+        text-align: center;
+        background: #D0E5F0;
+        padding: 1.5em;
+        display: flex;
+        flex-direction: column;
+
+        .informations__inforOne {
+
+            h1 {
+                font-size: 1.5em;
+                color: $fontColor;
+            }
+
+            h2 {
+                font-size: 1em;
+                color: $listColor;
+            }
+        }
+
+        .informations__infortow {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1em;
+            // padding: .2em;
+            position: relative;
+            top: 0;
+        }
+
+        .informations__inforthree {
+            background: $fontColor;
+            color: white;
+            text-decoration: none;
+            border-radius: .3em;
+            font-size: 1em;
+            position: relative;
+            top: 0;
+            // padding: .8em 2em .8em 2em;
+        }
+    }
+
+}
+
+.COVID {
+    padding: 1em;
+    text-align: center;
+    font-size: 3em;
+    color: $fontColor;
+}
+
+@media only screen and (max-width:1200px) {
+    .COVID {
+        padding: 1em;
+        text-align: center;
+        font-size: 1.8em;
+        color: $fontColor;
+    }
+}
+
+// @media only screen and (max-width:800px) {
+//     .COVID {
+//         padding: 1.8em;
+//         text-align: center;
+//         font-size: 1.2em;
+//         color: $fontColor;
+//     }
+// }
+
+.transmet {
+    margin: 1em auto;
+    display: flex;
+    justify-content: space-around;
+    width: 70em;
+
+    &__projection {
+        text-align: center;
+
+        img {
+            width: 10em;
+        }
+
+        h1 {
+            color: $listColor;
+        }
+    }
+
+    &__ftof {
+        text-align: center;
+
+        img {
+            width: 10em;
+        }
+
+        h1 {
+            color: $listColor;
+        }
+    }
+}
+
+@media only screen and(max-width:1200px) {
+    .transmet {
+        margin: 1em auto;
+        display: flex;
+        justify-content: space-around;
+        width: 50em;
+
+        &__projection {
+            text-align: center;
+
+            img {
+                width: 6em;
+            }
+
+            h1 {
+                font-size: 1.5em;
+                color: $listColor;
+            }
+        }
+
+        &__ftof {
+            text-align: center;
+
+            img {
+                width: 6em;
+            }
+
+            h1 {
+                font-size: 1.5em;
+                color: $listColor;
+            }
+        }
+    }
+}
+
+@media only screen and(max-width:820px) {
+    .transmet {
+        margin: 1em auto;
+        display: flex;
+        justify-content: space-around;
+        width: 40em;
+
+        &__projection {
+            text-align: center;
+
+            img {
+                width: 4em;
+            }
+
+            h1 {
+                font-size: 1em;
+                color: $listColor;
+            }
+        }
+
+        &__ftof {
+            text-align: center;
+
+            img {
+                width: 4em;
+            }
+
+            h1 {
+                font-size: 1em;
+                color: $listColor;
+            }
+        }
+    }
+}
+
+@media only screen and(max-width:650px) {
+    .transmet {
+        margin: 1em auto;
+        display: flex;
+        flex-direction: column;
+        width: 20em;
+
+        &__projection {
+            text-align: center;
+            padding-bottom: 1em;
+
+            img {
+                width: 6em;
+            }
+
+            h1 {
+                font-size: 1.5em;
+                color: $listColor;
+            }
+        }
+
+        &__ftof {
+            text-align: center;
+
+            img {
+                width: 6em;
+            }
+
+            h1 {
+                font-size: 1.5em;
+                color: $listColor;
+            }
+        }
+    }
 }
