--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -878,10 +878,11 @@ $listColor:#1A519E;
         }
 
         p {
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: 600;
             color: white;
             text-align: center;
+            line-height: 1.5em;
         }
 
         .blackP {
