--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -52,6 +52,8 @@ $listColor:#1A519E;
 }
 
 .langue {
+    color: black;
+    text-decoration: none;
     padding: .1em .3em .1em .3em;
     font-size: 1.5em;
     text-decoration: none;
