--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -143,6 +143,8 @@ $listColor:#1A519E;
 
 @media only screen and (max-width:576px) {
     .navbar {
+        display: flex;
+        justify-content: space-between;
 
         &__logo {
             padding-left: .5em;
@@ -150,7 +152,7 @@ $listColor:#1A519E;
         }
 
         &__listes {
-            padding-right: 2em;
+            padding-right: 4em;
 
             &--link {
                 color: black;
@@ -560,6 +562,63 @@ $listColor:#1A519E;
                 border: none;
                 border-radius: .2em;
                 width: 18em;
+                height: 2em;
+                color: #fff;
+                font-weight: bold;
+                font-size: 1.2em;
+                outline: none;
+                margin-top: 1em;
+                cursor: pointer;
+
+                &:active {
+                    box-shadow: 0em .3em .2em .1em rgb(20, 105, 161) inset;
+                }
+            }
+
+        }
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .secOne {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        &__img {
+            img {
+                width: 20em;
+            }
+
+        }
+
+        &__cntnt {
+            text-align: center;
+
+            &--h1 {
+                line-height: 1.4em;
+                width: 18em;
+                font-size: 1.3em;
+                font-weight: bold;
+                color: $fontColor;
+            }
+
+            &--img {
+                width: 4em;
+            }
+
+            &--p {
+                line-height: 1.4em;
+                font-size: 1.1em;
+                font-weight: bold;
+                color: #7F7F7F;
+            }
+
+            &--a {
+                background-color: #1078ad;
+                border: none;
+                border-radius: .2em;
+                width: 15em;
                 height: 2em;
                 color: #fff;
                 font-weight: bold;
