--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -191,7 +191,7 @@ $listColor:#1A519E;
     margin-top: 7.9em;
 
     &__dernière {
-        font-size: 1.5em;
+        font-size: 1.3em;
         font-weight: 700;
         text-align: center;
 
@@ -202,7 +202,7 @@ $listColor:#1A519E;
         margin: 0 auto;
         text-align: center;
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: 1em;
         line-height: 2em;
         color: $fontColor;
     }
@@ -252,7 +252,7 @@ $listColor:#1A519E;
         &--h1 {
             line-height: 1.5em;
             width: 21em;
-            font-size: 2.3em;
+            font-size: 2em;
             font-weight: bold;
             color: $fontColor;
         }
@@ -263,7 +263,7 @@ $listColor:#1A519E;
 
         &--p {
             line-height: 1.5em;
-            font-size: 2em;
+            font-size: 1.5em;
             font-weight: bold;
             color: #7F7F7F;
         }
@@ -272,7 +272,7 @@ $listColor:#1A519E;
             background-color: #1078ad;
             border: none;
             border-radius: .2em;
-            width: 23em;
+            width: 21em;
             height: 2em;
             color: #fff;
             font-weight: bold;
@@ -307,7 +307,7 @@ $listColor:#1A519E;
             &--h1 {
                 line-height: 1.3em;
                 width: 18em;
-                font-size: 2em;
+                font-size: 1.9em;
                 font-weight: bold;
                 color: $fontColor;
             }
@@ -318,7 +318,7 @@ $listColor:#1A519E;
 
             &--p {
                 line-height: 1.5em;
-                font-size: 1.8em;
+                font-size: 1.4em;
                 font-weight: bold;
                 color: #7F7F7F;
             }
@@ -374,7 +374,7 @@ $listColor:#1A519E;
 
             &--p {
                 line-height: 1.5em;
-                font-size: 1.4em;
+                font-size: 1.3em;
                 font-weight: bold;
                 color: #7F7F7F;
             }
@@ -633,7 +633,7 @@ $listColor:#1A519E;
 
 .symptomes {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
     padding: 1em;
     font-weight: 700;
     color: $fontColor;
@@ -649,17 +649,17 @@ $listColor:#1A519E;
         margin: 0 auto;
 
         &--img {
-            width: 8em;
+            width: 6em;
         }
 
         .fiévre {
-            height: 10em;
-            width: 4em;
+            height: 8em;
+            width: 3em;
         }
 
         &--p {
             text-align: center;
-            font-size: 1.3em;
+            font-size: 1.2em;
             font-weight: bold;
             color: black;
         }
@@ -689,13 +689,13 @@ $listColor:#1A519E;
             }
 
             .fiévre {
-                height: 8.5em;
-                width: 4.3em;
+                height: 7em;
+                width: 2.5em;
             }
 
             &--p {
                 text-align: center;
-                font-size: 1.3em;
+                font-size: 1.1em;
                 font-weight: bold;
                 color: black;
             }
@@ -727,7 +727,7 @@ $listColor:#1A519E;
 
             .fiévre {
                 height: 6.6em;
-                width: 3.5em;
+                width: 2.5em;
             }
 
             &--p {
@@ -768,7 +768,7 @@ $listColor:#1A519E;
             }
 
             &--p {
-                font-size: .8em;
+                font-size: .6em;
                 font-weight: 700;
                 color: black;
             }
@@ -786,7 +786,7 @@ $listColor:#1A519E;
     &__h1 {
         color: #D0E5F0;
         text-align: center;
-        font-size: 2.5em;
+        font-size: 2em;
         font-weight: 700;
     }
 
@@ -798,7 +798,7 @@ $listColor:#1A519E;
     }
 
     p {
-        font-size: 2em;
+        font-size: 1.5em;
         font-weight: 600;
         color: white;
     }
@@ -815,7 +815,7 @@ $listColor:#1A519E;
         top: 3em;
 
         &--h1 {
-            font-size: 2.4em;
+            font-size: 2em;
             font-weight: bold;
             color: #F4CF1B;
         }
@@ -825,7 +825,7 @@ $listColor:#1A519E;
             text-decoration: none;
             color: $fontColor;
             background-color: #F4CF1B;
-            font-size: 2.3em;
+            font-size: 2em;
             font-weight: bold;
             padding: .4em 1.1em .4em 1.1em;
             border-radius: .2em;
@@ -851,7 +851,7 @@ $listColor:#1A519E;
         &__h1 {
             color: #D0E5F0;
             text-align: center;
-            font-size: 2.3em;
+            font-size: 2em;
             font-weight: 700;
         }
 
@@ -863,7 +863,7 @@ $listColor:#1A519E;
         }
 
         p {
-            font-size: 1.5em;
+            font-size: 1.4em;
             font-weight: 600;
             color: white;
             text-align: center;
@@ -883,7 +883,7 @@ $listColor:#1A519E;
 
             &--h1 {
                 text-align: center;
-                font-size: 2.2em;
+                font-size: 2em;
                 font-weight: bold;
                 color: #F4CF1B;
             }
@@ -934,7 +934,7 @@ $listColor:#1A519E;
         }
 
         p {
-            font-size: 1.3em;
+            font-size: 1em;
             font-weight: 600;
             color: white;
             text-align: center;
@@ -956,7 +956,7 @@ $listColor:#1A519E;
 
             &--h1 {
                 text-align: center;
-                font-size: 1.7em;
+                font-size: 1.5em;
                 font-weight: bold;
                 color: #F4CF1B;
             }
@@ -967,7 +967,7 @@ $listColor:#1A519E;
                 text-decoration: none;
                 color: $fontColor;
                 background-color: #F4CF1B;
-                font-size: 1.8em;
+                font-size: 1.5em;
                 font-weight: bold;
                 padding: .3em 1em .3em 1em;
                 border-radius: .2em;
@@ -975,7 +975,7 @@ $listColor:#1A519E;
 
             &--site {
                 font-family: Arial, Helvetica, sans-serif;
-                font-size: 1.7em;
+                font-size: 1.5em;
                 color: white;
                 text-decoration: none;
                 border-bottom: .09em solid #F4CF1B;
@@ -994,7 +994,7 @@ $listColor:#1A519E;
     border-bottom-right-radius: .7em;
 
     &__h1 {
-        font-size: 2.1em;
+        font-size: 2em;
         font-weight: bold;
         color: $fontColor;
     }
@@ -1068,7 +1068,7 @@ $listColor:#1A519E;
         &--a {
             @extend .navbar__listes--link;
             padding: .5em;
-            font-size: 1.8em;
+            font-size: 1.5em;
             text-align: right;
 
         }
@@ -1085,7 +1085,7 @@ $listColor:#1A519E;
         line-height: 4.5em;
 
         &--firsth1 {
-            font-size: 2.3em;
+            font-size: 2em;
             font-weight: bold;
             color: $fontColor;
         }
@@ -1114,7 +1114,7 @@ $listColor:#1A519E;
     &__algo {
         text-align: justify;
         font-weight: 400;
-        font-size: 1.6em;
+        font-size: 1.5em;
         color: #7F7F7F;
         display: flex;
         align-items: center;
@@ -1137,7 +1137,7 @@ $listColor:#1A519E;
             &--a {
 
                 padding: .5em;
-                font-size: 1.3em;
+                font-size: 1.2em;
                 text-align: right;
 
             }
@@ -1272,7 +1272,7 @@ $listColor:#1A519E;
             &--a {
 
                 padding: .5em;
-                font-size: 1em;
+                font-size: .8em;
                 text-align: center;
 
             }
@@ -1280,42 +1280,42 @@ $listColor:#1A519E;
 
         &__contact {
             text-align: center;
-            line-height: 3em;
+            line-height: 2.3em;
 
             &--firsth1 {
-                font-size: 1em;
+                font-size: .8em;
                 font-weight: bold;
                 color: $fontColor;
             }
 
             &--firsth2 {
                 font-weight: bold;
-                font-size: .8em;
+                font-size: .6em;
 
             }
 
             &--secondh1 {
                 color: #369D53;
                 font-weight: bold;
-                font-size: 1em;
+                font-size: .8em;
             }
 
             &--secondh2 {
                 font-weight: bold;
-                font-size: .8em;
+                font-size: .6em;
             }
 
             &--lasth1 {
                 color: #369D53;
                 font-weight: bold;
-                font-size: 1em;
+                font-size: .8em;
             }
         }
 
         &__algo {
             text-align: center;
             font-weight: 400;
-            font-size: .8em;
+            font-size: .6em;
             color: #7F7F7F;
             display: flex;
             align-items: center;
@@ -1341,7 +1341,7 @@ $listColor:#1A519E;
     &__h1 {
         margin: .5em auto;
         color: $fontColor;
-        font-size: 2.3em;
+        font-size: 1.5em;
         width: 15em;
     }
 
@@ -1352,12 +1352,13 @@ $listColor:#1A519E;
         &--outil {
             img {
                 padding: 2em;
+                width: 6em;
             }
         }
 
         h1 {
             color: $listColor;
-            font-size: 1.3em;
+            font-size: 1.1em;
         }
 
     }
@@ -1366,13 +1367,13 @@ $listColor:#1A519E;
         padding-top: 2em;
 
         &--img {
-            width: 7em;
+            width: 6em;
         }
 
         &--h1 {
             padding: 1em;
             color: $listColor;
-            font-size: 1.3em;
+            font-size: 1.1em;
         }
     }
 }
@@ -1384,7 +1385,7 @@ $listColor:#1A519E;
         &__h1 {
             margin: .5em auto;
             color: $fontColor;
-            font-size: 1.9em;
+            font-size: 1.4em;
             width: 15em;
         }
 
@@ -1484,13 +1485,13 @@ $listColor:#1A519E;
 
             &--outil {
                 img {
-                    width: 6em;
+                    width: 5em;
                 }
             }
 
             h1 {
                 color: $listColor;
-                font-size: 1.2em;
+                font-size: 1em;
             }
 
         }
@@ -1505,7 +1506,7 @@ $listColor:#1A519E;
             &--h1 {
                 padding: 1em;
                 color: $listColor;
-                font-size: 1.2em;
+                font-size: 1em;
             }
         }
     }
@@ -1518,7 +1519,7 @@ $listColor:#1A519E;
         &__h1 {
             margin: .5em auto;
             color: $fontColor;
-            font-size: 1em;
+            font-size: .8em;
             font-weight: bold;
             width: 10em;
         }
@@ -1530,14 +1531,14 @@ $listColor:#1A519E;
 
             &--outil {
                 img {
-                    width: 6em;
+                    width: 5em;
                 }
             }
 
             h1 {
                 padding: 1em;
                 color: $listColor;
-                font-size: 1.2em;
+                font-size: .8em;
             }
 
         }
@@ -1546,13 +1547,13 @@ $listColor:#1A519E;
             padding-top: 2em;
 
             &--img {
-                width: 6em;
+                width: 5em;
             }
 
             &--h1 {
                 padding: 1.2em;
                 color: $listColor;
-                font-size: 1.2em;
+                font-size: .8em;
             }
         }
     }
@@ -1568,12 +1569,12 @@ $listColor:#1A519E;
     &__inforOne {
 
         h1 {
-            font-size: 3em;
+            font-size: 2em;
             color: $fontColor;
         }
 
         h2 {
-            font-size: 1.7em;
+            font-size: 1.5em;
             color: $listColor;
         }
     }
@@ -1584,14 +1585,14 @@ $listColor:#1A519E;
         text-decoration: none;
         border-radius: .3em;
         font-size: 1.5em;
-        padding: .8em;
+        padding: .6em;
         position: relative;
-        top: 5em;
+        top: 3.5em;
     }
 
     &__inforthree {
         @extend .informations__infortow;
-        padding: .8em 2.3em .8em 2.3em;
+        padding: .6em 2.1em .6em 2.1em;
     }
 }
 
@@ -1698,12 +1699,12 @@ $listColor:#1A519E;
         .informations__inforOne {
 
             h1 {
-                font-size: 1.5em;
+                font-size: 1em;
                 color: $fontColor;
             }
 
             h2 {
-                font-size: 1em;
+                font-size: .8em;
                 color: $listColor;
             }
         }
@@ -1713,7 +1714,7 @@ $listColor:#1A519E;
             color: white;
             text-decoration: none;
             border-radius: .3em;
-            font-size: 1em;
+            font-size: .9em;
             padding: .2em;
             position: relative;
             top: 0;
@@ -1724,7 +1725,7 @@ $listColor:#1A519E;
             color: white;
             text-decoration: none;
             border-radius: .3em;
-            font-size: .7em;
+            font-size: .6em;
             position: relative;
             top: 0;
             padding: .6em 1em .6em 1em;
@@ -1736,7 +1737,7 @@ $listColor:#1A519E;
 .COVID {
     padding: 1em;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
     color: $fontColor;
 }
 
@@ -1745,6 +1746,15 @@ $listColor:#1A519E;
         padding: 1em;
         text-align: center;
         font-size: 1.8em;
+        color: $fontColor;
+    }
+}
+
+@media only screen and (max-width:800px) {
+    .COVID {
+        padding: 1em;
+        text-align: center;
+        font-size: 1.3em;
         color: $fontColor;
     }
 }
@@ -1759,12 +1769,12 @@ $listColor:#1A519E;
         text-align: center;
 
         img {
-            width: 8em;
+            width: 6em;
         }
 
         h1 {
             color: $listColor;
-            font-size: 1.5em;
+            font-size: 1.2em;
         }
     }
 
@@ -1772,12 +1782,12 @@ $listColor:#1A519E;
         text-align: center;
 
         img {
-            width: 8em;
+            width: 6em;
         }
 
         h1 {
             color: $listColor;
-            font-size: 1.5em;
+            font-size: 1.2em;
         }
     }
 }
@@ -1864,11 +1874,11 @@ $listColor:#1A519E;
             padding-bottom: 1em;
 
             img {
-                width: 6em;
+                width: 4em;
             }
 
             h1 {
-                font-size: 1.2em;
+                font-size: .8em;
                 color: $listColor;
             }
         }
@@ -1877,11 +1887,11 @@ $listColor:#1A519E;
             text-align: center;
 
             img {
-                width: 6em;
+                width: 4em;
             }
 
             h1 {
-                font-size: 1.2em;
+                font-size: .9em;
                 color: $listColor;
             }
         }
