--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2120,7 +2120,7 @@ $colorQ:#e9ecef;
             padding: 5px;
             font-weight: 600;
             width: 55%;
-            min-width: 50%;
+            min-width: 60%;
         }
 
         .input-span {
@@ -2162,10 +2162,10 @@ $colorQ:#e9ecef;
         width: 100%;
         display: flex;
         justify-content: space-around;
-        flex-wrap: w;
+        flex-wrap: wrap;
 
         button {
-            width: 30%;
+            width: 20%;
             font-size: 22px;
             font-weight: bold;
             background-color: $colorP;
