--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2120,7 +2120,7 @@ $colorQ:#e9ecef;
             padding: 5px;
             font-weight: 600;
             width: 55%;
-            min-width: 60%;
+            min-width: 80%;
         }
 
         .input-span {
@@ -2162,7 +2162,6 @@ $colorQ:#e9ecef;
         width: 100%;
         display: flex;
         justify-content: space-around;
-        flex-wrap: wrap;
 
         button {
             width: 20%;
@@ -2192,6 +2191,31 @@ $colorQ:#e9ecef;
 
 }
 
+@media only screen and(max-width:700px) {
+    .testing {
+        .start-btn {
+            width: 50%;
+            font-size: 22px;
+            font-weight: bold;
+            color: $colorW;
+            background-color: $colorP;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn-container {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+
+            button {
+                width: 45%;
+            }
+        }
+    }
+}
 
 @media only screen and(max-width:1879px) {
     .testing {
