--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1932,6 +1932,26 @@ $colorQ:#e9ecef;
     cursor: pointer;
 }
 
+@media only screen and (max-width:1000px) {
+    #big-modl {
+        width: 100%;
+        height: 275em;
+        position: absolute;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+        display: none;
+    }
+
+    .popimg {
+        position: relative;
+        top: 50em;
+        left: 0em;
+        width: 100%;
+        height: 20%;
+        opacity: 1;
+        cursor: pointer;
+    }
+}
 
 
 
